Setup main page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,160 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">k
+    <link rel="stylesheet" href="assets/style.css">
     <title>Admin Dashboard</title>
 </head>
 <body>
+    <section class="main">
+        <section class="header">
+            <div class="user-bar">
+                <div class="search-icon"></div>
+            </div>
+            <div class="welcome">
+                <div class="avatar">
+                    <img src="#" alt="" srcset="">
+                </div>
+                <div class="welcome-text">
+                    <span class="greeting">Hi there,</span>
+                    <p class="name">Zaigham Salehi (@zsalehi)</p>
+                </div>
+                <div class="button-bar">
+                    <button class="new">New</button>
+                    <button class="upload">Upload</button>
+                    <button class="share">Share</button>
+                </div>
+            </div>
+        </section>
+        <section class="side-nav">
+            <div class="logo">
+                <div class="logo-icon"></div>
+                <div class="logo-text">Dashboard</div>
+            </div>
+            <div class="nav">
+                <div class="main-nav-list">
+                    <div class="list-item">
+                        <div class="list-icon"></div>
+                        <div class="nav-text">Home</div>
+                    </div>
+                    <div class="list-item">
+                        <div class="list-icon"></div>
+                        <div class="nav-text">Profile</div>
+                    </div>
+                    <div class="list-item">
+                        <div class="list-icon"></div>
+                        <div class="nav-text">Messages</div>
+                    </div>
+                    <div class="list-item">
+                        <div class="list-icon"></div>
+                        <div class="nav-text">History</div>
+                    </div>
+                    <div class="list-item">
+                        <div class="list-icon"></div>
+                        <div class="nav-text">Tasks</div>
+                    </div>
+                    <div class="list-item">
+                        <div class="list-icon"></div>
+                        <div class="nav-text">Communities</div>
+                    </div>
+                </div>
+                <div class="second-nav-list">
+                    <div class="list-item">
+                        <div class="list-icon"></div>
+                        <div class="nav-text">Settings</div>
+                    </div>
+                    <div class="list-item">
+                        <div class="list-icon"></div>
+                        <div class="nav-text">Support</div>
+                    </div>
+                    <div class="list-item">
+                        <div class="list-icon"></div>
+                        <div class="nav-text">Privacy</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="info-section">
+            <div class="projects-section">
+                <div class="title">Your Projects</div>
+                <div class="projects">
+                    <div class="project">
+                        <div class="project-info"></div>
+                        <div class="action-icons"></div>
+                    </div>
+                    <div class="project">
+                        <div class="project-info"></div>
+                        <div class="action-icons"></div>
+                    </div>
+                    <div class="project">
+                        <div class="project-info"></div>
+                        <div class="action-icons"></div>
+                    </div>
+                    <div class="project">
+                        <div class="project-info"></div>
+                        <div class="action-icons"></div>
+                    </div>
+                    <div class="project">
+                        <div class="project-info"></div>
+                        <div class="action-icons"></div>
+                    </div>
+                    <div class="project">
+                        <div class="project-info"></div>
+                        <div class="action-icons"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <div class="title">Announcements</div>
+                <div class="announcement-section">
+                    <div class="announcement">
+                        <h5 class="announcement-title"></h5>
+                        <p class="announcement-info"></p> 
+                    </div>
+                    <div class="announcement">
+                        <h5 class="announcement-title"></h5>
+                        <p class="announcement-info"></p>
+                    </div>
+                    <div class="announcement">
+                        <h5 class="announcement-title"></h5>
+                        <p class="announcement-info"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="trending">
+                <div class="title">Trending</div>
+                <div class="trending-section">
+                    <div class="trending-user">
+                        <div class="user-avatar"></div>
+                        <div class="user-info">
+                            <span class="username"></span>
+                            <span class="user-tagline"></span>
+                        </div>
+                    </div>
+                    <div class="trending-user">
+                        <div class="user-avatar"></div>
+                        <div class="user-info">
+                            <span class="username"></span>
+                            <span class="user-tagline"></span>
+                        </div>
+                    </div>
+                    <div class="trending-user">
+                        <div class="user-avatar"></div>
+                        <div class="user-info">
+                            <span class="username"></span>
+                            <span class="user-tagline"></span>
+                        </div>
+                    </div>
+                    <div class="trending-user">
+                        <div class="user-avatar"></div>
+                        <div class="user-info">
+                            <span class="username"></span>
+                            <span class="user-tagline"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
     
 </body>
 </html>
