Initial styles and grid layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <section class="main">
         <section class="header">
             <div class="user-bar">
-                <div class="search-icon"></div>
+                <div class="search">
+                    <div class="search-icon"></div>
+                    <div class="search-bar"></div>
+                </div>
+                <div class="user">
+                    <div class="notifications"></div>
+                    <div class="avatar-small"></div>
+                    <span class="user-name">Zaigham Salehi</span>
+                </div>
             </div>
             <div class="welcome">
                 <div class="avatar">
@@ -81,27 +89,27 @@
                 <div class="title">Your Projects</div>
                 <div class="projects">
                     <div class="project">
-                        <div class="project-info"></div>
+                        <div class="project-info">Super Cool Project</div>
                         <div class="action-icons"></div>
                     </div>
                     <div class="project">
-                        <div class="project-info"></div>
+                        <div class="project-info">Less Cool Project</div>
                         <div class="action-icons"></div>
                     </div>
                     <div class="project">
-                        <div class="project-info"></div>
+                        <div class="project-info">Impossible App</div>
                         <div class="action-icons"></div>
                     </div>
                     <div class="project">
-                        <div class="project-info"></div>
+                        <div class="project-info">Easy Peasy App</div>
                         <div class="action-icons"></div>
                     </div>
                     <div class="project">
-                        <div class="project-info"></div>
+                        <div class="project-info">Ad Blocker</div>
                         <div class="action-icons"></div>
                     </div>
                     <div class="project">
-                        <div class="project-info"></div>
+                        <div class="project-info">Money Maker</div>
                         <div class="action-icons"></div>
                     </div>
                 </div>
@@ -110,15 +118,15 @@
                 <div class="title">Announcements</div>
                 <div class="announcement-section">
                     <div class="announcement">
-                        <h5 class="announcement-title"></h5>
+                        <span class="announcement-title">Site Maintenance</span>
                         <p class="announcement-info"></p> 
                     </div>
                     <div class="announcement">
-                        <h5 class="announcement-title"></h5>
+                        <span class="announcement-title">Community Share Day</span>
                         <p class="announcement-info"></p>
                     </div>
                     <div class="announcement">
-                        <h5 class="announcement-title"></h5>
+                        <span class="announcement-title">Updated Privacy Policy</span>
                         <p class="announcement-info"></p>
                     </div>
                 </div>
