Finished side-nav and 70% of header

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <section class="header">
             <div class="user-bar">
                 <div class="search">
-                    <div class="search-icon"></div>
+                    <div class="search-icon"><img src="assets/img/magnify.svg" alt="search" ></div>
                     <div class="search-bar"></div>
                 </div>
                 <div class="user">
-                    <div class="notifications"></div>
-                    <div class="avatar-small"></div>
+                    <div class="notifications"><img src="assets/img/bell-ring-outline.svg" alt="notification-bell"></div>
+                    <div class="avatar-small"><img src="assets/img/zaigham.jpeg" alt="avatar" ></div>
                     <span class="user-name">Zaigham Salehi</span>
                 </div>
             </div>
@@ -38,47 +38,47 @@
         </section>
         <section class="side-nav">
             <div class="logo">
-                <div class="logo-icon"></div>
+                <div class="logo-icon"><img src="assets/img/microsoft-windows.svg" alt="lg-icon" class="lg-icon"></div>
                 <div class="logo-text">Dashboard</div>
             </div>
             <div class="nav">
                 <div class="main-nav-list">
                     <div class="list-item">
-                        <div class="list-icon"></div>
+                        <div class="list-icon"><img class="icon" src="assets/img/home.svg" alt="icon"></div>
                         <div class="nav-text">Home</div>
                     </div>
                     <div class="list-item">
-                        <div class="list-icon"></div>
+                        <div class="list-icon"><img class="icon" src="assets/img/card-account-details.svg" alt="icon"></div>
                         <div class="nav-text">Profile</div>
                     </div>
                     <div class="list-item">
-                        <div class="list-icon"></div>
+                        <div class="list-icon"><img class="icon" src="assets/img/message-reply.svg" alt="icon"></div>
                         <div class="nav-text">Messages</div>
                     </div>
                     <div class="list-item">
-                        <div class="list-icon"></div>
+                        <div class="list-icon"><img class="icon" src="assets/img/history.svg" alt="icon"></div>
                         <div class="nav-text">History</div>
                     </div>
                     <div class="list-item">
-                        <div class="list-icon"></div>
+                        <div class="list-icon"><img class="icon" src="assets/img/checkbox-marked-circle-plus-outline.svg" alt="icon"></div>
                         <div class="nav-text">Tasks</div>
                     </div>
                     <div class="list-item">
-                        <div class="list-icon"></div>
+                        <div class="list-icon"><img class="icon" src="assets/img/account-group.svg" alt="icon"></div>
                         <div class="nav-text">Communities</div>
                     </div>
                 </div>
                 <div class="second-nav-list">
                     <div class="list-item">
-                        <div class="list-icon"></div>
+                        <div class="list-icon"><img class="icon" src="assets/img/cog.svg" alt="icon"></div>
                         <div class="nav-text">Settings</div>
                     </div>
                     <div class="list-item">
-                        <div class="list-icon"></div>
+                        <div class="list-icon"><img class="icon" src="assets/img/face-agent.svg" alt="icon"></div>
                         <div class="nav-text">Support</div>
                     </div>
                     <div class="list-item">
-                        <div class="list-icon"></div>
+                        <div class="list-icon"><img class="icon" src="assets/img/shield-check.svg" alt="icon"></div>
                         <div class="nav-text">Privacy</div>
                     </div>
                 </div>
