Added icons for projects sections

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="welcome">
                 <div class="avatar">
-                    <img src="#" alt="" srcset="">
+                    <img src="assets/img/zaigham.jpeg" alt="avatar" >
                 </div>
                 <div class="welcome-text">
                     <span class="greeting">Hi there,</span>
@@ -90,27 +90,39 @@
                 <div class="projects">
                     <div class="project">
                         <div class="project-info">Super Cool Project</div>
-                        <div class="action-icons"></div>
+                        <div class="action-icons">
+                            <img src="assets/img/star-plus-outline.svg" alt="favorite"><img src="assets/img/eye-plus-outline.svg" alt="watch-list"><img src="assets/img/share-variant-outline.svg" alt="share">
+                        </div>
                     </div>
                     <div class="project">
                         <div class="project-info">Less Cool Project</div>
-                        <div class="action-icons"></div>
+                        <div class="action-icons">
+                            <img src="assets/img/star-plus-outline.svg" alt="favorite"><img src="assets/img/eye-plus-outline.svg" alt="watch-list"><img src="assets/img/share-variant-outline.svg" alt="share">
+                        </div>
                     </div>
                     <div class="project">
                         <div class="project-info">Impossible App</div>
-                        <div class="action-icons"></div>
+                        <div class="action-icons">
+                            <img src="assets/img/star-plus-outline.svg" alt="favorite"><img src="assets/img/eye-plus-outline.svg" alt="watch-list"><img src="assets/img/share-variant-outline.svg" alt="share">
+                        </div>
                     </div>
                     <div class="project">
                         <div class="project-info">Easy Peasy App</div>
-                        <div class="action-icons"></div>
+                        <div class="action-icons">
+                            <img src="assets/img/star-plus-outline.svg" alt="favorite"><img src="assets/img/eye-plus-outline.svg" alt="watch-list"><img src="assets/img/share-variant-outline.svg" alt="share">
+                        </div>
                     </div>
                     <div class="project">
                         <div class="project-info">Ad Blocker</div>
-                        <div class="action-icons"></div>
+                        <div class="action-icons">
+                            <img src="assets/img/star-plus-outline.svg" alt="favorite"><img src="assets/img/eye-plus-outline.svg" alt="watch-list"><img src="assets/img/share-variant-outline.svg" alt="share">
+                        </div>
                     </div>
                     <div class="project">
                         <div class="project-info">Money Maker</div>
-                        <div class="action-icons"></div>
+                        <div class="action-icons">
+                            <img src="assets/img/star-plus-outline.svg" alt="favorite"><img src="assets/img/eye-plus-outline.svg" alt="watch-list"><img src="assets/img/share-variant-outline.svg" alt="share">
+                        </div>
                     </div>
                 </div>
             </div>
