Updated styles for info-section

--- a/index.html
+++ b/index.html
@@ -89,13 +89,21 @@
                 <div class="title">Your Projects</div>
                 <div class="projects">
                     <div class="project">
-                        <div class="project-info">Super Cool Project</div>
+                        <div class="project-info">
+                            <span class="project-title">Super Cool Project</span>
+                            <p class="project-info">Sed tempus ut lacus ut scelerisque Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                        </div>
                         <div class="action-icons">
                             <img src="assets/img/star-plus-outline.svg" alt="favorite"><img src="assets/img/eye-plus-outline.svg" alt="watch-list"><img src="assets/img/share-variant-outline.svg" alt="share">
                         </div>
                     </div>
                     <div class="project">
-                        <div class="project-info">Less Cool Project</div>
+                        <div class="project-info">
+                            <span class="project-title">Less Cool Project</span>
+                            <p class="project-info">Nullam condimentum ipsum ut lectus vehicula
+                                consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius
+                                bellentesque lacus</p>
+                        </div>
                         <div class="action-icons">
                             <img src="assets/img/star-plus-outline.svg" alt="favorite"><img src="assets/img/eye-plus-outline.svg" alt="watch-list"><img src="assets/img/share-variant-outline.svg" alt="share">
                         </div>
@@ -131,15 +139,19 @@
                 <div class="announcement-section">
                     <div class="announcement">
                         <span class="announcement-title">Site Maintenance</span>
-                        <p class="announcement-info"></p> 
+                        <p class="announcement-info">Vestibulum condimentum tellus lacus,
+                            in accumsan alt maximus ac Donec
+                            nenarent sodales conque</p> 
                     </div>
                     <div class="announcement">
                         <span class="announcement-title">Community Share Day</span>
-                        <p class="announcement-info"></p>
+                        <p class="announcement-info">Nam vellectus unclaunt, rutrum nulla eu. ornare libero.
+                            Aliquam dictum accumsan portitor</p>
                     </div>
                     <div class="announcement">
                         <span class="announcement-title">Updated Privacy Policy</span>
-                        <p class="announcement-info"></p>
+                        <p class="announcement-info">Phasellus efficitur nisi eget elit
+                            consecietur. eder condimentum ante auctor. Cras fringilla sagittis sem in mattis</p>
                     </div>
                 </div>
             </div>
@@ -149,29 +161,29 @@
                     <div class="trending-user">
                         <div class="user-avatar"></div>
                         <div class="user-info">
-                            <span class="username"></span>
-                            <span class="user-tagline"></span>
+                            <span class="username">@tegan</span>
+                            <span class="user-tagline">World Peace Builder</span>
                         </div>
                     </div>
                     <div class="trending-user">
                         <div class="user-avatar"></div>
                         <div class="user-info">
-                            <span class="username"></span>
-                            <span class="user-tagline"></span>
+                            <span class="username">@morgan</span>
+                            <span class="user-tagline">Super Cool Project</span>
                         </div>
                     </div>
                     <div class="trending-user">
                         <div class="user-avatar"></div>
                         <div class="user-info">
-                            <span class="username"></span>
-                            <span class="user-tagline"></span>
+                            <span class="username">@kendall</span>
+                            <span class="user-tagline">Life Changing App</span>
                         </div>
                     </div>
                     <div class="trending-user">
                         <div class="user-avatar"></div>
                         <div class="user-info">
-                            <span class="username"></span>
-                            <span class="user-tagline"></span>
+                            <span class="username">@alex</span>
+                            <span class="user-tagline">No Traffic Maker</span>
                         </div>
                     </div>
                 </div>
